fixes to templated. added z-index for logo link. Now it hides while ad playing..

--- a/css/style.css
+++ b/css/style.css
@@ -344,3 +344,7 @@ iframe.player__video.hidden {
     transform: scale(0.3, 0.3);
     z-index: 9999;
 }
+
+.logo_link {
+    z-index: 9999999999;
+}
